# gym-donkeycar-uv

./: CONTRIBUTING.rst  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: installation.rst
scripts/vlm_driving/: __init__.py  build_weighted_dataset.py  calibrate_turn.py  collect_data.py  collect_images.py  create_dataset.py  evaluate.py  preprocess_data.py  rl_collect.py  test_zero_shot.py  train.py  train_rl.py
scripts/vlm_driving/conf/: config.yaml
scripts/vlm_driving/conf/data/: collection.yaml
scripts/vlm_driving/conf/inference/: default.yaml
scripts/vlm_driving/conf/model/: lora.yaml  qwen3_2b.yaml
scripts/vlm_driving/conf/rl/: default.yaml
scripts/vlm_driving/conf/training/: default.yaml
scripts/vlm_driving/utils/: __init__.py  dataset_utils.py  image_analysis.py  metrics.py  prompts.py  steering_buckets.py  vlm_handler.py
